cas-home/site-specific.css
/* ... */
.campus-green-grid .uk-button:hover {
    background-color: #fff !important;
    color: #1E6B52 !important;
    border-top: 1px solid #80bc00 !important;
    border-left: 0px solid #fff !important;
    border-right: 0px solid #fff !important;
    border-bottom: 0px solid #fff !important;
}

.campus-green-grid .uk-panel-box {
    border-color: #80bc00;
}

.campus-green-grid .uk-margin {
    margin-bottom: 50px;
}

/*GRID STACK WIDGET*/
.grid-stack .uk-button {
    background-color: #1E6B52;
    border: 0px;
    color: #fff !important;
    border-radius: 2px;
    padding: 0.3em 0.8em;
    line-height: 150%;
}

.grid-stack .uk-button:hover {
    background-color: #fff !important;
    border: 1px solid #1E6B52 !important;
}
.grid-stack .uk-panel-title {
    color: #1E6B52;
}


/*ACCOMPLISHMENTS, STATS, OR FAST FACTS ROWS*/
.stats-row {
    display: block;
}

.stats-column p {
    margin-bottom: 0px;
    margin-top: 0px;
}

.stats-column {
    border-right: 0px;
    border-bottom: 2px solid #80bc00;
    text-align: center;
}

.stats-column:last-child {
    border-bottom: 0px;
}

@media all and (min-width: 723px) {
    .stats-row {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        margin-top: 2em;
    }

    .stats-column {
        flex: 1 1 150px;
        font-size: 36px;
        font-weight: bold;
        padding: 0.2em 1em 0.5em;
        border-right: 2px solid #80bc00;
        border-bottom: 0px;
        box-sizing: border-box;
    }

    .stats-column:last-child {
        border-right: 0px;
    }
}


/*WHITE BUTTON - Styled for full-width, dark green focus box and divs with a green bg*/
.template-01 .focus-box--full-width--green a:visited,
.template-01 .focus-box--full-width--green a:link,
.dark-green-bg .btn--white {
    border-bottom: 0px !important;
    color: #1E6B52 !important;
}


.template-01.linear.hd #wrapper focus-box--pull-right--green .btn--white:hover {
    border: 1px solid #fff !important;
    border-radius: 2px !important;
}


/*Decorative line with circle at end*/
.line {
    width: 2px;
    height: 40px;
    background-color:#1E6B52;
    margin: 0 auto;
}
.circle {
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background-color: #80bc00;
    border: 3px solid #fff;
    box-shadow: 0 0 0 2px #1E6B52;
    margin: 0 auto -15px;
}

/*CONTENT WITH PHOTO BACKGROUND*/
.photo-bg-section {
    background-color: #808285;
    padding: 4em 0;
    background-size: cover; 
    background-repeat: no-repeat; 
    background-position: center;
}

.photo-bg-section div.subpage-inner {
    background-color: rgba(255, 255, 255, 0.95);
    padding: 0.5em 3em 2.5em 3em;
}
@media all and (max-width: 979px) {
    .photo-bg-section {
        padding: 5%;
    }
}

/*NEWS MODULE*/
.news .clr {
    display: none;
}
.news .srfrContainer li.srfrRow {
    display: flex;
    align-items: center;
}
.news .srfrImage {
    order: 2;
    min-width: 150px;
    max-width: 150px;
    padding: 0px;
}
.news .srfrContainer  h3 {
    order: 1;
    text-align: left;
    margin: 0 0 0 1em;
}
.news .srfrContainer h3 a {
    text-decoration: none;
    border-bottom-width: 0px !important;
    text-transform: none;
    color: #000 !important;
    font-size: 1.2rem;
    letter-spacing: 0px;
}
.news .srfrContainer h3 a:hover {
    color: #1E6B52 !important;
    background-color: #fff !important;
}
.news .srfrContainer ul.srfrList li {
    border-bottom: 2px solid #80bc00;
}
.news .srfrContainer ul.srfrList li:last-child {
    border-bottom-width:0px;
}


/*STATS COUNTERS - HOME, ABOUT*/
.stats-column p.counter, 
.stats-column p.counter span {
    font-size: 36px; 
    font-weight: bold;
    color: #fff;
}



/*HOME*/
/*Banner*/
.home-banner {
    position: relative;
}
.home-banner-text {
    position: absolute;
    margin: 0 auto;
    width: 100%;
    box-sizing: border-box;
    bottom: 0px;
}
.home-banner-text h1 {
    color:#fff;
    font-size: 2.5rem;
    letter-spacing: 2px;
    text-shadow: 0px 0px 30px rgba(0,0,0,0.6), 0px 0px 80px rgba(0,0,0,0.5);
}
/*Intro copy*/
.home-intro {
    max-width: 1080px;
    margin: 0 auto;
    padding: 1em 0 2.75em 0;
    text-align: center;
    box-sizing: border-box;
}
.home-intro p span,
.home-intro p {
    font-size: 1.4rem;
    color: #1E6B52;
    font-weight: 600;
}
.home-inner {
    max-width: 1080px;
    margin: 0 auto;
    padding: 1em 1em 2em 1em;
    box-sizing: border-box;
}

.home-inner-heading {
    text-align: center;
    color: #1E6B52;
    margin-bottom: 1em;
}
@media all and (max-width: 1080px) {
    .home-intro {
        padding-left: 5%;
        padding-right: 5%;
    }
}
/*Degrees, Dept., Centers Switcher*/
.home-degrees-dept .uk-switcher {
    background-color: #f4f8ee;
    border-top: 1px solid #80bc00;
}
.home-degrees-dept .uk-switcher div.uk-margin {
    max-width: 1080px;
    margin:0 auto;
    padding: 1em 0;
}
.home-degrees-dept  .uk-tab-center {
    border-bottom-width: 0px;
}
.home-degrees-dept .uk-tab-center .uk-tab>li,
.home-degrees-dept .uk-switcher li {
    margin-bottom: 0px !important;
}
.home-degrees-dept .uk-tab > li > a {
    border-width: 0px;
    color: #1E6B52;
    border-color: #fff;
    border-style: solid;
    border-width: 1px 1px 0px;
}
.home-degrees-dept .uk-tab > li > a:hover {
    border-color: #f5f5f5;
    border-width: 1px 1px 0px;
    border-style: solid;
}
.home-degrees-dept .uk-tab > li.uk-active > a {
    background-color: #f4f8ee;
    border-width: 1px 1px 0px;
    border-style: solid;
    border-color: #80bc00;
}
.home-degrees-dept .uk-tab > li.uk-active > a:hover {
    color: #1E6B52 !important;
}
/*Switcher Content*/
.browse-degrees {
    display: flex;
    flex-wrap: wrap;
}
.browse-degrees-col {
    flex: 1 1 300px;
}
.browse-centers {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    box-sizing: border-box;
}
.browse-centers-col{
    box-sizing: border-box;
    flex: 1 1 400px;
}
/* ... */

